--- a/index.html
+++ b/index.html
@@ -81,37 +81,37 @@
                     <span class="navigation-next"></span>
 
                     <div id="carousel-wrap">
-                        <div class="item">
-                            <img src="./images/page7/new1.png">
-                            <div class="card">
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new1.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
                                 <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="./images/page7/new2.png">
-                            <div class="card">
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new2.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
                                 <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="./images/page7/new3.png">
-                            <div class="card">
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new3.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
                                 <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="./images/page7/new4.png">
-                            <div class="card">
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new4.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
                                 <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="./images/page7/new1.png">
-                            <div class="card">
+                        <div class="item card">
+                            <div class="card-img" style="background-image: url('./images/page7/new1.png')"></div>
+                            <div class="card card-block">
                                 <h3 class="card-title">WE HAVE DREAM——3COLOUR 2016 春季新品发布会</h3>
                                 <p>中有拥有梦想，并且为梦想拼命的努力过，当我们想起年轻时的岁月，才不会觉得遗憾。也唯有梦想，才能像最新鲜的阳光一样，照亮我们漫漫的...</p>
                             </div>
@@ -134,36 +134,36 @@
             <div class="opacity0" id="section4">
                 <div class="row Liz-container">
                     <div class="col-xs-3 Liz-padding-0">
-                        <div>
-                            <img src="./images/page7/info1.png" width="100%"/>
-                            <div class="card">
+                        <div class="card">
+                            <div class="card-img" style="background-image: url('./images/page7/info1.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">集团文化</h3>
                                 <p>公司前进的每一步，无论是一大步还是一小步，都要带动行业发展的脚步。</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-3 Liz-padding-0">
-                        <div>
-                            <img src="./images/page7/info2.png" width="100%"/>
-                            <div class="card">
+                        <div class="card">
+                            <div class="card-img" style="background-image: url('./images/page7/info2.png')"></div>
+                            <div card-block>
                                 <h3 class="card-title">公益事业</h3>
                                 <p>爱心助学 矢志不渝</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-3 Liz-padding-0">
-                        <div>
-                            <img src="./images/page7/info3.png" width="100%"/>
-                            <div class="card">
+                        <div class="card">
+                            <div class="card-img" style="background-image: url('./images/page7/info3.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">人才发展</h3>
                                 <p>人的命运不仅在于他的能力，更在于他是否能善待身边的每一个人</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-3 Liz-padding-0">
-                        <div>
-                            <img src="./images/page7/info4.png" width="100%"/>
-                            <div class="card">
+                        <div class="card">
+                            <div class="card-img" style="background-image: url('./images/page7/info4.png')"></div>
+                            <div class="card-block">
                                 <h3 class="card-title">商城</h3>
                                 <p>我深谙【女为悦己而容】的姿态，坚持自我主张的同时，我也要赢得众人的认可。</p>
                             </div>
@@ -197,7 +197,7 @@
                 <div class="section Liz-border-vertical Liz-bg-default">
                     <div class="Liz-container Liz-margin-vertical-lg">
                         <div class="Liz-flex  Liz-flex-justify-center">
-                            <img src="images\page1\top.png">
+                            <img id="go-header" class="go-header" src="images\page1\top.png">
                         </div>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
         <script src="js/jquery.waypoints.min.js"></script>
         <script src="js/headroom.min.js"></script>
         <script src="js/jquery.headroom.min.js"></script>
+        <script src="js/base.js"></script>
         <script src="js/index.js"></script>
-        <script type="text/javascript" src="js/base.js"></script>
     </body>
 </html>
