--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col-xs-3 Liz-padding-0">
                         <div class="card">
                             <div class="card-img" style="background-image: url('./images/page7/info2.png')"></div>
-                            <div card-block>
+                            <div class="card-block">
                                 <h3 class="card-title">公益事业</h3>
                                 <p>爱心助学 矢志不渝</p>
                             </div>
