--- a/main.html
+++ b/main.html
@@ -34,9 +34,9 @@
         	<img src="images/page2/left.png" alt="">
         </div>
         <ul class="Liz-flex-1" style="height:50px">
-            <img src="images/page2/logo-1.png" alt="" class="logImg Liz-none">
-            <img src="images/page2/logo-2.png" alt="" class="logImg Liz-block">
-            <img src="images/page2/logo-3.png" alt="" class="logImg Liz-none">
+            <a href="#" class="logImg Liz-none"><img src="images/page2/logo-1.png" alt=""></a>
+            <a href="#" class="logImg Liz-block"><img src="images/page2/logo-2.png" alt=""></a>
+            <a href="#" class="logImg Liz-none"><img src="images/page2/logo-3.png" alt=""></a>
         </ul>
         <div class="arrow-right Liz-flex-1">
         	<img src="images/page2/right.png" alt="">
