--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                             </ul>
                         </li>
                         <li class="Liz-flex-1">
-                            <a href="#">旗下品牌</a>
+                            <a href="./subbrand.html">旗下品牌</a>
                         </li>
                         <li class="Liz-flex-1">
-                            <a href="#">新闻中心</a>
+                            <a href="./news.html">新闻中心</a>
                         </li>
                         <li class="Liz-flex-1">
-                            <a href="#">人才发展</a>
+                            <a href="./development.html">人才发展</a>
                         </li>
                         <li class="Liz-flex-1">
-                            <a href="#">网上商城</a>
+                            <a href="./webstore.html">网上商城</a>
                         </li>
                     </ul>
                 </div>
