--- a/learn.html
+++ b/learn.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>index</title>
+    <title>学习发展</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animation.css" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
@@ -44,16 +44,16 @@
                         </ul>
                     </li>
                     <li class="Liz-flex-1">
-                        <a href="#">旗下品牌</a>
+                        <a href="./subbrand.html">旗下品牌</a>
                     </li>
                     <li class="Liz-flex-1">
-                        <a href="#">新闻中心</a>
+                        <a href="./news.html">新闻中心</a>
                     </li>
                     <li class="Liz-flex-1">
-                        <a href="#">人才发展</a>
+                        <a href="./development.html">人才发展</a>
                     </li>
                     <li class="Liz-flex-1">
-                        <a href="#">网上商城</a>
+                        <a href="./webstore.html">网上商城</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
     <div class="section">
         <div class="Liz-container">
             <ol class="breadcrumb2">
-              <li><a href="#">HOME</a></li>
+              <li><a href="./index.html">HOME</a></li>
               <li><a href="#">人才发展</a></li>
               <li class="active">学习发展</li>
             </ol>
